; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btu/extr_btu_hcif.c_btu_hcif_connection_request_evt.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btu/extr_btu_hcif.c_btu_hcif_connection_request_evt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HCI_LINK_TYPE_ACL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*)* @btu_hcif_connection_request_evt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btu_hcif_connection_request_evt(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i64* %0, i64** %2, align 8
  %6 = load i32, i32* %3, align 4
  %7 = load i64*, i64** %2, align 8
  %8 = call i32 @STREAM_TO_BDADDR(i32 %6, i64* %7)
  %9 = load i32, i32* %4, align 4
  %10 = load i64*, i64** %2, align 8
  %11 = call i32 @STREAM_TO_DEVCLASS(i32 %9, i64* %10)
  %12 = load i64, i64* %5, align 8
  %13 = load i64*, i64** %2, align 8
  %14 = call i32 @STREAM_TO_UINT8(i64 %12, i64* %13)
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* @HCI_LINK_TYPE_ACL, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %1
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @btm_sec_conn_req(i32 %19, i32 %20)
  br label %27

22:                                               ; preds = %1
  %23 = load i32, i32* %3, align 4
  %24 = load i32, i32* %4, align 4
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @btm_sco_conn_req(i32 %23, i32 %24, i64 %25)
  br label %27

27:                                               ; preds = %22, %18
  ret void
}

declare dso_local i32 @STREAM_TO_BDADDR(i32, i64*) #1

declare dso_local i32 @STREAM_TO_DEVCLASS(i32, i64*) #1

declare dso_local i32 @STREAM_TO_UINT8(i64, i64*) #1

declare dso_local i32 @btm_sec_conn_req(i32, i32) #1

declare dso_local i32 @btm_sco_conn_req(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
